# esp-idf-starter

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
tests/test_app_core/: test_app_core.c
